# cffdrs

./: .gitignore  README.local.md  README.md  __init__.py  metric.py  param.py  pyproject.toml
fbp/: README.md  __init__.py  fd.py  hfi.py  metric.py  ros.py
fbp/fuel/: README.md  __init__.py  code.py  description.py  factory.py  lut.py
fbp/fuel/model/: README.md  __init__.py  abstract.py  conifer.py  grass.py  (+3 more)
fwi/: README.md  __init__.py  bui.py  dc.py  dmc.py  dsr.py  ffmc.py  fmc.py  fwi.py  isi.py  metric.py
fwi/__pycache__/: bui._iszero-44.py312.1.nbc  bui._iszero-44.py312.nbi  bui._iszero-45.py312.1.nbc  bui._iszero-45.py312.nbi  bui._scaler-55.py312.1.nbc  bui._scaler-55.py312.nbi  bui._scaler-56.py312.1.nbc  bui._scaler-56.py312.nbi  bui._ufunc-90.py312.1.nbc  bui._ufunc-90.py312.nbi  bui._ufunc-91.py312.1.nbc  bui._ufunc-91.py312.nbi  dc._dlf-66.py312.1.nbc  dc._dlf-66.py312.nbi  dc._dlf-68.py312.1.nbc  dc._dlf-68.py312.nbi  dc._pe-82.py312.1.nbc  dc._pe-82.py312.nbi  dc._pe-84.py312.1.nbc  dc._pe-84.py312.nbi  dc._scalar-93.py312.1.nbc  dc._scalar-93.py312.nbi  dc._scalar-95.py312.1.nbc  dc._scalar-95.py312.nbi  dc._ufunc-124.py312.1.nbc  dc._ufunc-124.py312.nbi  dc._ufunc-126.py312.1.nbc  dc._ufunc-126.py312.nbi  dmc._b-113.py312.1.nbc  dmc._b-113.py312.nbi  dmc._ell-86.py312.1.nbc  dmc._ell-86.py312.nbi  dmc._func-165.py312.1.nbc  dmc._func-165.py312.nbi  dmc._month-76.py312.1.nbc  dmc._month-76.py312.nbi  dmc._scalar-124.py312.1.nbc  dmc._scalar-124.py312.nbi  dsr._scalar-22.py312.1.nbc  dsr._scalar-22.py312.nbi  (+55 more)
raster/: __init__.py  fbp.py  fwi.py
