[tool.poetry]
name = "cffdrs"
version = "0.1.0"
description = "Canadian Forest Fire Danger Rating System (CFFDRS) implementation"
authors = ["Jordan Gunn <jordan@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JordanGunn/cffdrs"
repository = "https://github.com/JordanGunn/cffdrs"
keywords = ["fire", "weather", "forestry", "cffdrs", "fwi", "fbp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.0"
numba = "^0.58.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true